--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ web:
     - mysql
   volumes:
     - ~/www/Elgg/:/var/www/html/
+    - ~/www/elgg-docker/:/elgg-docker/
 mysql:
   image: mysql:5.6  
   environment:
