--- a/2.0/docker-compose.yml
+++ b/2.0/docker-compose.yml
@@ -5,7 +5,7 @@ web:
   links:
     - mysql
   volumes:
-    - ~/www/Elgg/:/var/www/html/
+    - .:/var/www/html/
   environment:
     MYSQL_USER: root
     MYSQL_PASS: root-pass
