Fix bug in elgg-install.sh and creation of elgg-config directory

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,17 @@
 web:
   build: .
   ports:
-    - "8000:80"
+    - "8080:80"
   links:
     - mysql
   volumes:
-    - .:/var/www/html/
+    - ~/WebProjects/elgg/:/var/www/html/
   environment:
     MYSQL_USER: root
     MYSQL_PASS: root-pass
     ELGG_USERNAME: admin
     ELGG_PASSWORD: admin-pass
+    ELGG_WWW_ROOT: http://localhost:8080
 mysql:
   image: mysql:5.6  
   environment:
