--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,34 @@
-web:
-  build: .
-  ports:
-    - "8080:80"
-  links:
-    - mysql
-  volumes:
-    - ~/WebProjects/elgg/:/var/www/html/
-  environment:
-    MYSQL_USER: root
-    MYSQL_PASS: root-pass
-    ELGG_USERNAME: admin
-    ELGG_PASSWORD: admin-pass
-    ELGG_WWW_ROOT: http://localhost:8080
-mysql:
-  image: mysql:5.6  
-  environment:
-    MYSQL_DATABASE: elgg
-    MYSQL_ROOT_PASSWORD: root-pass
+version: "3.8"
+#volumes:
+  #db-store:
+  #backend-store:
+  #backend-cache:
+
+services:
+  web:
+    build: ./php
+    ports:
+      - "5000:80"
+    volumes:
+      #- backend-store:/var/www/html
+      #- backend-cache:/elgg/data
+      - ./elgg/html:/var/www/html
+      - ./elgg/data:/elgg/data
+    environment:
+      ELGG_DB_HOST: db
+      ELGG_DB_PORT: 3306
+      ELGG_PATH: /var/www/html/
+      ELGG_DATA_ROOT: /elgg/data/
+
+  db:
+    build: ./mysql
+    volumes:
+      #- db-store:/var/lib/mysql
+      - ./elgg/mysql:/var/lib/mysql
+    env_file:
+      - ./mysql/.env
+
+  mail:
+    image: juanluisbaptiste/postfix:latest
+    env_file:
+      - ./postfix/.env
